# target_neuron_ablation

./: README.md  bib.txt  justfile  mypy.ini  neuron.yml  pyproject.toml  test.py  visualize_results_post.ipynb
ablations/: entropy.sh  run_and_store_unigram_results2.py
ablations/conf/: config_unigram_ablations1.yaml
case_studies/: BOS.sh  induction.sh  natural_induction.sh
experiments/: surprisal_base.sh
experiments/ablation/: ablate_group.sh  ablate_neuron.sh  ablate_neuron_1.4b.sh  ablate_neuron_160m.sh  ablate_neuron_1b.sh  ablate_neuron_2.8b.sh  ablate_neuron_6.9b.sh  ablate_neuron_70.sh  ablate_neuron_large.sh  ablate_neuron_model.sh  save_entropy.sh
experiments/analysis/: analyze_a_geometry.sh  analyze_a_geometry_dyna.sh  analyze_a_geometry_dynamics_group.sh  analyze_a_geometry_dynamics_ind.sh  analyze_a_geometry_manual.sh  analyze_a_graph.sh  analyze_a_graph_multi.sh  analyze_a_graph_single.sh  analyze_a_mi.sh  analyze_a_mi_group.sh  analyze_a_mi_group_70.sh  analyze_a_mi_individual.sh  analyze_a_modularity_single.sh  analyze_w_geometry.sh  analyze_w_htsr.sh  analyze_w_htsr_manual.sh
experiments/bash/: ablate_neuron.sh  ablate_unigram.sh  ablate_unigram_410.sh  ablate_unigram_70.sh  ablate_unigram_array.sh  analyze_a_geometry.sh  analyze_direction.sh  analyze_geometry.sh  analyze_unigram.sh  analyze_unigram_410.sh  analyze_unigram_70.sh  analyze_w_geometry.sh  compute_h_410.sh  compute_h_410mm.sh  compute_h_410ms_merge.sh  compute_h_410ms_tail.sh  compute_h_410tm_merged.sh  compute_h_410tm_tail.sh  compute_h_410tr_merged.sh  compute_h_410ts_merge.sh  compute_h_410ts_tail.sh  compute_h_410tz_merged.sh  compute_h_410tz_tail.sh  compute_h_70.sh  compute_h_70mm.sh  compute_h_70ms_merge.sh  compute_h_70ms_tail.sh  compute_h_70tm.sh  compute_h_70tm_merged.sh  compute_h_70tm_tail.sh  compute_h_70tr_tail.sh  compute_h_70tr_tail_debug.sh  compute_h_70trs_merged.sh  compute_h_70ts_merge.sh  compute_h_70ts_tail.sh  compute_h_70tz.sh  compute_h_70tz_merged.sh  compute_h_70tz_tail.sh  compute_h_full.sh  compute_h_full_supress.sh  (+46 more)
experiments/classify/: reflection_individual.sh  sel_threshold.sh  train.sh  train_debug.sh  train_group.sh  train_individual.sh  train_individual_baseline.sh  train_threshold.sh
experiments/conf/: config_unigram_ablations.yaml
experiments/eval/: finetune.sh
experiments/pipeline/: save_entropy.sh
experiments/preprocess/: load_dataset.sh  prepare_context.sh
experiments/selection/: extract_pickle.sh  sel_group.sh  sel_group_common.sh  sel_group_cpu.sh  sel_group_rare.sh  sel_neuron.sh  sel_neuron_410.sh  sel_neuron_70.sh  sel_neuron_threshold_1B.sh  sel_neuron_threshold_410.sh  sel_neuron_threshold_70.sh  sel_neuron_threshold_gpt.sh  sel_neuron_threshold_gpt_elbow.sh  sel_neuron_threshold_multi.sh  sel_neuron_threshold_pythia_elbow.sh
files/: directory_structure.md  experiments.md
notebooks/: RAG.ipynb  RAG_fig.ipynb  appendix_figure.ipynb  checked_visu.ipynb  load_util.py  parse_stat.ipynb  plot.ipynb  plot_surprisal.ipynb
results/: pythia_surprisal_analysis_20250217_081233.csv  pythia_surprisal_summary_20250217_081233.csv
src/neuron_analyzer/: __init__.py  ablation.py  ablations.py  cdi.py  freq.py  geometric.py  geometry.py  load_util.py  manual_label.py  model_util.py  null_space.py  preprocess.py  settings.py  surprisal copy.py  surprisal.py
src/target_neuron_ablation.egg-info/: PKG-INFO  SOURCES.txt  (+2 more)
surprisal/: compare_surprisal.py  develop_surprisal.py
(+175 files in other folders)
